force-app/main/default/objects/Lead/fields/Alpha2Code__c.field-meta.xml
<CustomField>
    <fullName>Alpha2Code__c</fullName>
    <formula>Country__r.Alpha2Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alpha2Code</label>
    <type>Text</type>
</CustomField>