force-app/main/default/objects/Lead/fields/Alpha3Code__c.field-meta.xml
<CustomField>
    <fullName>Alpha3Code__c</fullName>
    <formula>Country__r.Alpha3Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alpha3Code</label>
    <type>Text</type>
</CustomField>