force-app/main/default/objects/Lead/fields/CapitalCity__c.field-meta.xml
<CustomField>
    <fullName>CapitalCity__c</fullName>
    <formula>Country__r.CapitalCity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CapitalCity</label>
    <type>Text</type>
</CustomField>