force-app/main/default/objects/Lead/fields/RegionalBloc__c.field-meta.xml
<CustomField>
    <fullName>RegionalBloc__c</fullName>
    <formula>Country__r.RegionalBloc__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RegionalBloc</label>
    <type>Text</type>
</CustomField>